# kb-search

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  MANIFEST.md  PRD.md  PROJECT_DOCS.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250626_001_init.py  20250626_002_add_tsvector_trigger.py  20250626_003_fix_indexes_and_constraints.py  20250630_004_seed_categories.py
app/: config.py  database.py  main.py
app/models/: __init__.py  category.py  document.py  search_log.py  user.py
app/routers/: auth.py  categories.py  documents.py  health.py  search.py  stats.py  tags.py
app/services/: document_parser.py  search_service.py  spell_corrector.py  stats_service.py
app/tasks/: document_tasks.py
app/utils/: logging.py  redis_client.py  security.py  text_utils.py
docker/: Dockerfile  entrypoint.sh
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/api/: auth.js  category.js  document.js  search.js
frontend/src/router/: index.js
frontend/src/store/: user.js
frontend/src/utils/: common.js  request.js
scripts/: load_test.py
tests/: conftest.py  load_test.py  test_api.py  test_auth_api.py  test_case.md  test_categories.py  test_categories_api.py  test_documents_api.py  test_health.py  test_health_api.py  test_search.py  test_search_api.py  test_spell_corrector.py  test_stats_api.py  test_tags_api.py
开发计划/: 知识库检索工具_开发计划.md  知识库检索工具_第二三阶段详细计划.md
(+6 files in other folders)
