[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-search"
version = "0.1.0"
description = "Knowledge Base Search System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.19",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.6",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "mistune>=3.0.2",
    "beautifulsoup4>=4.12.3",
    "bleach>=6.1.0",
    "python-docx>=1.1.2",
    "pydantic-settings>=2.3.4",
    "prometheus-client>=0.20.0",
    "python-magic>=0.4.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
